--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-streamlit==1.49.1
+streamlit==1.22.0
 pandas==2.3.2
 chromadb==1.0.21
 langchain==0.3.27
 langchain-groq==0.3.8
 llama-index==0.6.10
 python-dotenv==1.1.1
-requests==2.32.5
+requests==2.29.0
 rich==14.1.0
-typing-extensions==4.15.0
 pyyaml==6.0.2
+altair==5.5.0
+markdown-it-py==4.0.0
+mdurl==0.1.2
+pygments==2.19.2
