--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,7 @@ pydeck==0.9.1
 Pygments==2.19.2
 PyPika==0.48.9
 pyproject_hooks==1.2.0
+pysqlite3-binary==0.5.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
